# aera

./: Makefile  README.md  aera.opam  dune-project
lib/frontend/: ast.ml  parser.ml  pretty.ml  resolver.ml  source.ml  span.ml  token.ml
lib/interpreter/: env.ml  eval.ml  interpreter.ml  repl.ml  run.ml  value.ml
